--- a/estrutura-de-dados/linked-lists.ipynb
+++ b/estrutura-de-dados/linked-lists.ipynb
@@ -126,9 +126,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "E é isso! Implementamos nossa Linked List com suas funções básicas, além de entendemos quando usar e também quais problemas ela resolve. \n",
     "\n",
     "Espero que tenham curtido e aprendido um pouco mais sobre estrutura de dados. Até a próxima!\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Ian Sobral\n",
+    "\n",
     "\n",
     "[Meu Linkedin](https://www.linkedin.com/in/ian-sobral-0b54701a9/)"
    ]
