--- a/estrutura-de-dados/linked-lists.ipynb
+++ b/estrutura-de-dados/linked-lists.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As linguagens de programação oferecem diferentes maneiras de armazenar e acessar dados. Exemplos comuns são as arrays, listas, mapas entre outros.\n",
+    "As linguagens de programação oferecem diferentes maneiras de armazenar e acessar dados. Exemplos comuns são as arrays, listas, mapas, entre outros.\n",
     "\n",
     "Através delas, armazenamos os elementos em localizações de memória contínua, ou seja, qualquer elemento em uma Array pode ser localizado em tempo constante O(1), com menor complexidade e, consequentemente, oferecendo rapidez e possibilitando o menor tempo de busca possível. Isso é, enquanto soubermos examente o index do elemento que queremos localizar. \n",
     "\n",
